...
    <string name="cloud_download_failed">File download failed</string>
    <string name="cloud_uploading_file">Uploading: </string>
    <string name="cloud_downloading_file">Downloading: </string>
    <string name="cloud_upload_invalid_file_path">Invalid file path</string>
    <string name="cloud_delete_successful">File deleted successfully</string>
    <string name="cloud_delete_failed">File delete failed</string>
    <string name="unable_to_resolve_address">Unable to resolve address</string>
    <string name="event_not_found">Event not found...</string>
    <string name="profile_not_found">Profile not found...</string>
    <string name="creation_cancelled">Creation cancelled</string>


    <!-- Map radius -->
...
